--- a/pages/console/prd/SPrdOrgPageInfo.html
+++ b/pages/console/prd/SPrdOrgPageInfo.html
@@ -3,18 +3,26 @@
 	@update by 
 	@description 
 -->
-<div>
-	<el-form-q :field-data="queryFields" :buttons="queryButtons" ref="form" v-if="resetQuery"></el-form-q>
-	<div class="yu-toolBar">
-
-		<el-button-group>
-			<el-button icon="plus" @click="addFn" v-if="checkPermission('create')">新增</el-button>
-			<el-button icon="yx-bin" @click="deleteFn" v-if="checkPermission('delete')">删除</el-button>
-		</el-button-group>
+<div class="userCfg">
+	<div class="user-title">
+		<b>报表权限管理</b>
+		<div class="right-content">
+			<el-row type="flex">
+				<yu-button icon="plus" @click="addFn" v-if="checkPermission('create')">新增</yu-button>
+				<yu-button icon="yx-bin" @click="deleteFn" v-if="checkPermission('delete')">删除</yu-button>
+				<yu-input v-show="!showXform" v-model="input" placeholder="请输入内容" :limit-char="limitChar"></yu-input>
+				<yu-button key="resetPwd" type="text" @click="hightSearchFn">高级搜索
+					<i class="el-icon-arrow-down"></i>
+				</yu-button>
+			</el-row>
+		</div>
 	</div>
-	<el-table-x ref="reftable" :row-index="true" :radiobox="false" :base-params="baseParams" :data-url="dataUrl" :table-columns="tableColumns"
-				:request-type="'POST'"></el-table-x>
-
+	<div class="user-table">
+		<yu-xform-q v-show="resetQuery" ref="form" :field-data="queryFields" :buttons="queryButtons" :columns="3"></yu-xform-q>
+		<yu-xtable-x ref="refTable" :row-index="true" :radiobox="false" :base-params="baseParams" :data-url="dataUrl" request-type="POST"
+		 :table-columns="tableColumns">
+		</yu-xtable-x>
+	</div>
 	<el-dialog-x :title="viewTitle[viewType]" :visible.sync="dialogVisible" size="large">
 
 		<el-form-x ref="baseRef" :group-fields="updateFields" label-width="125px" :disabled="formDisabled"></el-form-x>
@@ -26,7 +34,4 @@
 		</div>
 
 	</el-dialog-x>
-
-
-
 </div>
