--- a/pages/console/system/SRoleRescRulePageInfo.html
+++ b/pages/console/system/SRoleRescRulePageInfo.html
@@ -8,25 +8,20 @@
     <div class="user-title">
       <b>资源权限</b>
     </div>
-    <el-row :gutter="20">
-      <el-col :span="7">
-        <el-input placeholder="输入角色名称进行过滤" v-model="roleName">
-        </el-input>
+    <el-row>
+      <el-col :span="7" style="padding: 0 10px">
+        <el-input placeholder="输入角色名称进行过滤" v-model="roleName" style="padding: 10px 0"></el-input>
         <el-tree :style="autoStyle" class="filter-tree" v-loading="role.loading" :data="role.roles" :props="role.props" default-expand-all
           :filter-node-method="filterRoleNode" :highlight-current="true" :expand-on-click-node="false" ref="roleTree" @node-click="roleNodeClick">
         </el-tree>
       </el-col>
-      <el-col :span="10">
-
-        <el-input placeholder="输入资源中文描述进行过滤" v-model="rescDesc">
-        </el-input>
-
+      <el-col :span="10" style="padding: 0 10px">
+        <el-input placeholder="输入资源中文描述进行过滤" v-model="rescDesc" style="padding: 10px 0"></el-input>
         <el-tree :style="autoStyle" class="filter-tree" v-loading="resc.loading" :data="resc.roles" :props="resc.props" default-expand-all
           :filter-node-method="filterRescNode" :highlight-current="true" :expand-on-click-node="false" ref="rescTree" @node-click="rescNodeClick">
         </el-tree>
-
       </el-col>
-      <el-col :span="7">
+      <el-col :span="7" style="padding: 0 10px">
         <el-checkbox-group v-model="roleRescRules" style="margin-top: 36px;margin-left: 5px;">
           <el-checkbox v-for="rescAct in rescActs" :label="rescAct.rescActCode" :key="rescAct.rescActCode">
             {{rescAct.rescActDesc}}
